--- a/Module2solution/css/styles.css
+++ b/Module2solution/css/styles.css
@@ -14,8 +14,8 @@ div {
 
 .content {
     padding: 15px;
-    padding-top: 15px;
-    padding-bottom: 5px;
+    padding-top: 20px;
+    margin-bottom: 0;
 }
 
 .title {
@@ -54,6 +54,10 @@ h1 {
         margin: 10px;
         margin-left: 1%;
         margin-right: 1%;
+    }
+
+    h1 {
+        margin-bottom: 50px;
     }
 }
 
