--- a/Module2solution/css/styles.css
+++ b/Module2solution/css/styles.css
@@ -73,5 +73,12 @@ h1 {
     }
 }
 
-
+@media screen and (max-width: 767px) {
+    div {
+        margin-left: 10%; 
+        margin-right: 10%;
+        margin-bottom: 10px;
+        margin-top: 10px
+    }
+}
     
