--- a/Module2solution/css/styles.css
+++ b/Module2solution/css/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 div {
-    background-color: grey;
+    background-color: lightgrey;
     position: relative;
     float: left;
     border: 1px solid black;
