--- a/Module3optional/css/styles.css
+++ b/Module3optional/css/styles.css
@@ -53,6 +53,8 @@ h1 {
     margin-top: 15px;
     font-weight: bold;
     font-family:monospace;
+    text-shadow: 1px 3px 5px rgb(0, 0, 0);
+    color:rgb(194, 139, 73)
 }
 
 h2 {
@@ -61,5 +63,7 @@ h2 {
 
 .m-1 {
     background-color: rgb(221, 182, 132);
-    height: 98%
+    height: 98%;
+    border-radius: 10px;
+    box-shadow: 0 1px 10px rgba(0,0,0,0.5);
 }
