--- a/Module3optional/css/styles.css
+++ b/Module3optional/css/styles.css
@@ -20,6 +20,7 @@ hr.dropdown-divider {
 
 .navbar-brand:hover {
     color: white;
+    text-shadow: 1px 1px 10px rgb(255, 255, 255);;
 }
 
 .navbar-toggler {
@@ -66,4 +67,12 @@ h2 {
     height: 98%;
     border-radius: 10px;
     box-shadow: 0 1px 10px rgba(0,0,0,0.5);
+    transition-duration: 0.3s;
+    }
+
+
+div.m-1:hover {
+    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.5);
+    transition-duration: 0.3s;
 }
+
